# vst-video-utils

./: .gitignore  .gitmodules  .npmignore  CMakeLists.txt  README.md  build.sh  package-lock.json  package.json
.circleci/: config.yml
ci/: build.sh  envscript.sh  initSubmodules.sh  installDependencies.sh  publish.sh
ci/ciScripts/: activateEmsdk.sh  checkVersions.sh  initSubmodules.sh  installDependencies.sh  publishPackage.sh
conan/: conanfile.py
src/: CMakeLists.txt  VideoUtils.js  ffmpegutils.cpp  ffmpegutils.h  indexeddb.cpp  indexeddb.h  main.cpp  messaging.js  objtracking.cpp  videoutils.cpp  videoutils.h
src/objtracking/: Deferral.hpp  VSTSuspicionEngine.cpp  VSTSuspicionEngine.hpp  VSTVideoTracker.cpp  VSTVideoTracker.hpp
tests/: CMakeLists.txt  test.html
